@@ -1,5 +1,13 @@
 2006-01-06  Adam Jackson  <ajax@freedesktop.org>
 
+	* hw/xfree86/dri/dri.c:
+	* hw/xfree86/dri/dristruct.h:
+	Move drawable lock acquisition into DRIClipNotify from DRIValidateTree, so we only take it when
+	clipping a DRI drawable instead of on every tree update.  Note drawable lock acquisition per-
+	screen instead of globally, and drop it in BlockHandler if necessary.
+
+2006-01-06  Adam Jackson  <ajax@freedesktop.org>
+
 	* hw/xfree86/loader/misym.c:
 	* mi/Makefile.am:
 	* mi/mi.h:
